--- a/physics_calculations.html
+++ b/physics_calculations.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="intro">
-        <p>På denne siden kan du beregne svarene på fysikkrelaterte spørsmål, blant annet innenfor bevegelse, krefter og energi. <br> Velg enheten du skal regne ut, fyll inn de påkrevde størrelsene, og la kalkulatoren gjøre resten.</p>
+        <p>På denne siden kan du beregne svarene på fysikkrelaterte spørsmål, blant annet innenfor bevegelse, krefter og energi. <br> Velg enheten du skal regne ut, fyll inn de påkrevde størrelsene, og la kalkulatoren gjøre resten.<br>Ønsker du å se formlene som brukes, kan du se dem ved å trykke på knappen under utregningen.</p>
     </div>
 
     <div id="movement" class="section-heading">
