--- a/chemistry_calculations.html
+++ b/chemistry_calculations.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 
-<html>
+<html> 
 
 <head>
-    <title>Vitenskapelig kalkulator | Kjemi</title>
+    <title>PiTagoras Calculator | Chemistry</title>
     <link href="./style.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="menu-bar">
-        <div><a href="./main.html" class="logo"><img src="images/pi.png" class="logo-img"></a></div>
+        <div><a href="./main.html" class="logo"><img src="images/pi.png" class="logo-img"><span class="logo-text"> - tagoras</span></a></div>
         <ul class="menu">
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
