--- a/chemistry_calculations.html
+++ b/chemistry_calculations.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>PiTagoras Calculator | Chemistry</title>
+    <link href="images/favicon.ico" rel="icon">
     <link href="./style.css" rel="stylesheet">
 </head>
 
