--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>PiTagoras Calculator | Home</title>
+    <link href="images/favicon.ico" rel="icon">
     <link href="./style.css" rel="stylesheet">
 </head>
 
