--- a/physics_calculations.html
+++ b/physics_calculations.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>PiTagoras Calculator | Physics</title>
+    <link href="images/favicon.ico" rel="icon">
     <link href="./style.css" rel="stylesheet">
 </head>
 
