--- a/chemistry_calculations.html
+++ b/chemistry_calculations.html
@@ -15,6 +15,8 @@
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
             <li><a href="./chemistry_calculations.html">Kjemi</a></li>
+            <li><a href="./discussion.html">Diskusjon</a></li>
+            <li><a href="./about.html">Om PiTagoras</a></li>
             <li></li>
         </ul>
     </nav>
@@ -28,37 +30,47 @@
         </ul>
     </div>
 
+    <h1>Kjemi:</h1>
+
     <div class="intro">
         <p>På denne siden kan du beregne svarene på kjemirelaterte spørsmål, blant annet innenfor støkiometrien. <br> Velg enheten du skal regne ut, fyll inn de påkrevde størrelsene, og la kalkulatoren gjøre resten.<br>Ønsker du å se formlene som brukes, kan du se dem ved å trykke på knappen under utregningen.</p>
     </div>
 
-    <div id="orbitals" class="section-heading">
-        <h2>Skall og orbitaler:</h2>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
+    <div class="main-content">
+        <div id="orbitals" class="section-heading">
+            <h2>Skall og orbitaler:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+
+        <div id="stoichiometry" class="section-heading">
+            <h2>Støkiometri:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
     </div>
 
-    <div id="stoichiometry" class="section-heading">
-        <h2>Støkiometri:</h2>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-    </div>
+
+    <footer id="footer">
+        <br>
+        <p>&copy Some rights might possibly be reserved.</p>
+    </footer>
 
 </body>
 
