--- a/maths_calculations.html
+++ b/maths_calculations.html
@@ -15,9 +15,88 @@
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
             <li><a href="./chemistry_calculations.html">Kjemi</a></li>
+            <li><a href="./discussion.html">Diskusjon</a></li>
+            <li><a href="./about.html">Om PiTagoras</a></li>
             <li></li>
         </ul>
     </nav>
+
+    <div id="space"></div>
+    <div class="contents">
+        <h3>Innhold:</h3>
+        <ul>
+            <li><a href="#quadratic-equations">Andregradslikninger</a></li>
+            <li><a href="#derivation">Derivasjon</a></li>
+            <li><a href="#limit-values">Grenseverdier</a></li>
+        </ul>
+    </div>
+
+    <h1>Matematikk:</h1>
+    <div class="intro">
+        <p>På denne siden kan du beregne svarene på matematiske problemer, blant annet innenfor derivasjon, grenseverdier og andre funksjonsrelaterte oppgaver. <br> Velg enheten du skal regne ut, fyll inn de påkrevde størrelsene, og la kalkulatoren gjøre resten.<br>Ønsker du å se formlene som brukes, kan du se dem ved å trykke på knappen under utregningen.</p>
+    </div>
+
+    <div class="main-content">
+        <div id="quadratic-equations" class="section-heading">
+            <h2>Andregradslikninger:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+        <div id="derivation" class="section-heading">
+            <h2>Derivasjon:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+        <div id="limit-values" class="section-heading">
+            <h2>Grenseverdier:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+    </div>
+
+
+    <footer id="footer">
+        <br>
+        <p>&copy Some rights might possibly be reserved.</p>
+    </footer>
     
 </body>
 
