--- a/physics_calculations.html
+++ b/physics_calculations.html
@@ -15,6 +15,8 @@
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
             <li><a href="./chemistry_calculations.html">Kjemi</a></li>
+            <li><a href="./discussion.html">Diskusjon</a></li>
+            <li><a href="./about.html">Om PiTagoras</a></li>
             <li></li>
         </ul>
     </nav>
@@ -29,63 +31,94 @@
         </ul>
     </div>
 
+    <h1>Fysikk:</h1>
+
     <div class="intro">
         <p>På denne siden kan du beregne svarene på fysikkrelaterte spørsmål, blant annet innenfor bevegelse, krefter og energi. <br> Velg enheten du skal regne ut, fyll inn de påkrevde størrelsene, og la kalkulatoren gjøre resten.<br>Ønsker du å se formlene som brukes, kan du se dem ved å trykke på knappen under utregningen.</p>
     </div>
 
-    <div id="movement" class="section-heading">
-        <h2>Bevegelse:</h2>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
+    <div class="main-content">
+        <div id="movement" class="section-heading">
+            <h2>Bevegelse:</h2>
+
+            <label for="movement-unit-result">Hva vil du regne ut?</label>
+            <select name="movement-unit-result" id="movement-unit-result">
+                <option value=""></option>
+                <option value="acceleration">Akselerasjon (m/s^2)</option>
+                <option value="velocity">Hastighet (m/s)</option>
+                <option value="position">Posisjon (m)</option>
+                <option value="velocity-0">Starthastighet (m/s)</option>
+                <option value="time">Tid (s)</option>
+            </select>
+
+            <label for="movement-unit-info">Hva vet du fra før?</label>
+            <select name="movement-unit-info" id="movement-unit-info">
+                <option value=""></option>
+                <option value="acceleration">Akselerasjon (m/s^2)</option>
+                <option value="velocity">Hastighet (m/s)</option>
+                <option value="position">Posisjon (m)</option>
+                <option value="velocity-0">Starthastighet (m/s)</option>
+                <option value="time">Tid (s)</option>
+            </select>
+
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+        <div id="forces" class="section-heading">
+            <h2>Krefter:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
+        <div id="energy" class="section-heading">
+            <h2>Mekanisk energi:</h2>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+            <p>data</p>
+        </div>
     </div>
-    <div id="forces" class="section-heading">
-        <h2>Krefter:</h2>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-    </div>
-    <div id="energy" class="section-heading">
-        <h2>Mekanisk energi:</h2>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-        <p>data</p>
-    </div>
+
+
+    <footer id="footer">
+        <br>
+        <p>&copy Some rights might possibly be reserved.</p>
+    </footer>
     
 </body>
 
