--- a/main.html
+++ b/main.html
@@ -9,15 +9,21 @@
 </head>
 
 <body>
+    <div>
     <nav class="menu-bar">
         <div><a href="./main.html" class="logo"><img src="images/pi.png" class="logo-img"><span class="logo-text"> - tagoras</span></a></div>
         <ul class="menu">
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
             <li><a href="./chemistry_calculations.html">Kjemi</a></li>
+            <li><a href="./discussion.html">Diskusjon</a></li>
+            <li><a href="./about.html">Om PiTagoras</a></li>
             <li></li>
         </ul>
     </nav>
+
+
+
     
 </body>
 
