--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
     <nav class="menu-bar">
-        <div><a href="./main.html" class="logo"><img src="images/pi.png" class="logo-img"><span class="logo-text"> - tagoras</span></a></div>
+        <div><a href="./index.html" class="logo"><img src="images/pi.png" class="logo-img"><span class="logo-text"> - tagoras</span></a></div>
         <ul class="menu">
             <li><a href="./maths_calculations.html">Matte</a></li>
             <li><a href="./physics_calculations.html">Fysikk</a></li>
