trying to add game

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="./physics_calculations.html">Fysikk</a></li>
             <li><a href="./chemistry_calculations.html">Kjemi</a></li>
             <li><a href="./discussion.html">Diskusjon</a></li>
-            <li><a href="./about.html">Om PiTagoras</a></li>
+            <li><a href="./game_page.html">Spill</a></li>
             <li></li>
         </ul>
     </nav>
