--- a/game_page.html
+++ b/game_page.html
@@ -28,7 +28,8 @@
         <iframe src="./game/index.html"></iframe>
     </div>
 
-
+    <h2>Controls:</h2>
+    <p>Left: [A]   |   Right: [D]</p>
 
 
 
