--- a/physics_calculations.html
+++ b/physics_calculations.html
@@ -86,7 +86,11 @@
 
             <button id="submit-button">Submit</button>
 
-            <p id="result-output">Svar:</p>
+            <p id="result-output" class="result-output">Resultat:</p>
+
+            <div id="meme-image"></div>
+
+            <div class="section-separation"></div>
 
 
             
